OPENJPA-787,OPENJPA-799: getSingleResult() and multiple aggregate projections
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@722059 13f79535-47bb-0310-9956-ffa450edef68